--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="navbar">
             <img src="Untitled-2.png" class="logo">
             <ul>
-                <li><a href="testmainpage.html">home</a></li>
+                <li><a href="index.html">home</a></li>
                 <li><a href="pages/stocks.html">stocks</a></li>
                 <li><a href="pages/analysis.html">analysis</a></li>
                 <li><a href="pages/about.html">about</a></li>
