--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
             <img src="Untitled-2.png" class="logo">
             <ul>
                 <li><a href="index.html">home</a></li>
-                <li><a href="pages/stocks.html">stocks</a></li>
-                <li><a href="pages/analysis.html">analysis</a></li>
-                <li><a href="pages/about.html">about</a></li>
+                <li><a href="stocks.html">stocks</a></li>
+                <li><a href="analysis.html">analysis</a></li>
+                <li><a href="about.html">about</a></li>
             </ul>
         </div>
         <div class="content">
