--- a/analysis.html
+++ b/analysis.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>testzerotrade</title>
+        <title>streettrade</title>
     <link rel="stylesheet" href="analysis.css">
     </head>
     <body>
