--- a/stocks.html
+++ b/stocks.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Streettrade</title>
+        <title>streettrade</title>
     <link rel="stylesheet" href="stocks.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
