--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </ul>
         </div>
         <div class="content">
-            <h1>ZERoTRADe</h1>
+            <h1>STREETTRADe</h1>
             <p>Trade using our technical analysis , trade like an expert </p>
             <div>
                 <button type="button"><span></span>sign in</button>
@@ -37,7 +37,7 @@
                 </ul>
             </div>
             <div class="footer-bottom">
-                <p>copyright &copy;2021 ZeroTrade. designed by <span>abdelrahman mohamed</span></p>
+                <p>copyright &copy;2021 STREETTrade. designed by abdelrahman mohamed</p>
             </div>
         </footer>
     </body>
