--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <footer>
             <div class="footer-content">
-                <h3>Zero Trade</h3>
+                <h3>STREETTRADe</h3>
                 <p>CONTACT US : 01005465858 </p>
                 <ul class="socials">
                     <li><a href="https://www.facebook.com/abdelrahman.xman.3"><i class="fa fa-facebook"></i></a></li>
