--- a/stocks.html
+++ b/stocks.html
@@ -248,7 +248,7 @@
         </div>
         <footer>
           <div class="footer-content">
-              <h3>Zero Trade</h3>
+              <h3>STREETTRADe</h3>
               <p>CONTACT US : 01005465858 </p>
               <ul class="socials">
                   <li><a href="https://www.facebook.com/abdelrahman.xman.3"><i class="fa fa-facebook"></i></a></li>
@@ -259,7 +259,7 @@
               </ul>
           </div>
           <div class="footer-bottom">
-              <p>copyright &copy;2021 ZeroTrade. designed by <span>abdelrahman mohamed</span></p>
+              <p>copyright &copy;2021 ZeroTrade. designed by abdelrahman mohamed</p>
           </div>
       </footer>
     </body>
