--- a/analysis.html
+++ b/analysis.html
@@ -16,7 +16,7 @@
             </ul>
         </div>
         <div class="content">
-            <h1>ZERoTRADe</h1>
+            <h1>STREETTRADe</h1>
             <p>Sorry,this page is under develop</p>
         </div>
         <footer>
