--- a/about.html
+++ b/about.html
@@ -16,5 +16,21 @@
             </ul>
         </div>
         </div>
+                <footer>
+          <div class="footer-content">
+              <h3>STREETTRADe</h3>
+              <p>CONTACT US : 01005465858 </p>
+              <ul class="socials">
+                  <li><a href="https://www.facebook.com/abdelrahman.xman.3"><i class="fa fa-facebook"></i></a></li>
+                  <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                  <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                  <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+                  <li><a href="#"><i class="fa fa-linkedin-square"></i></a></li>
+              </ul>
+          </div>
+          <div class="footer-bottom">
+              <p>copyright &copy;2021 ZeroTrade. designed by abdelrahman mohamed</p>
+          </div>
+      </footer>
     </body>
 </html>
