--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </ul>
             </div>
             <div class="footer-bottom">
-                <p>copyright &copy;2021 STREETTrade. designed by abdelrahman mohamed</p>
+                <p>copyright &copy;2021 STREETTRADe. designed by abdelrahman mohamed</p>
             </div>
         </footer>
     </body>
