--- a/stocks.html
+++ b/stocks.html
@@ -259,7 +259,7 @@
               </ul>
           </div>
           <div class="footer-bottom">
-              <p>copyright &copy;2021 ZeroTrade. designed by abdelrahman mohamed</p>
+              <p>copyright &copy;2021 STREETTRADe. designed by abdelrahman mohamed</p>
           </div>
       </footer>
     </body>
