--- a/analysis.html
+++ b/analysis.html
@@ -32,7 +32,7 @@
                 </ul>
             </div>
             <div class="footer-bottom">
-                <p>copyright &copy;2021 ZeroTrade. designed by <span>abdelrahman mohamed</span></p>
+                <p>copyright &copy;2021 STREETTRADe. designed by <span>abdelrahman mohamed</span></p>
             </div>
         </footer>
     </body>
