--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
     <head>
         <title>streettrade</title>
     <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <div class="banner">
