--- a/about.html
+++ b/about.html
@@ -17,6 +17,9 @@
             </ul>
         </div>
         </div>
+        <iframe width="840" height="630"
+src="https://youtu.be/xyxlgLVMDYc">
+        </iframe>
         <footer>
           <div class="footer-content">
               <h3>STREETTRADe</h3>
