--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
         </div>
         </div>
         <iframe width="840" height="630"
-src="https://youtu.be/xyxlgLVMDYc">
+src="https://www.youtube.com/embed/xyxlgLVMDYc">
         </iframe>
         <footer>
           <div class="footer-content">
