--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </ul>
             </div>
             <div class="footer-bottom">
-                <p>copyright &copy;2021 STREETTRADe. designed by <span>abdelrahman mohamed</span></p>
+                <p>copyright &copy;2021 STREETTRADe. designed by abdelrahman mohamed</p>
             </div>
         </footer>
     </body>
