--- a/stocks.html
+++ b/stocks.html
@@ -40,8 +40,8 @@
               <tr>
                 <td>2</td>
                 <td>FWRY.CA</td>
-                <td>72,400
-                  <i class="fa fa-caret-down" aria-hidden="true"></i>
+                <td>9,1
+                  <i class="fa fa-caret-up" aria-hidden="true"></i>
                 </td>
                 <td>...<,>...</td>
                 <td>...<,>...</td>
