--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <body>
         <div class="banner">
         <div class="navbar">
+            <a href="index.html" >
             <img src="Untitled-2.png" class="logo">
+            </a>
             <ul>
                 <li><a href="index.html">home</a></li>
                 <li><a href="stocks.html">stocks</a></li>
